<resources>
    <string name="app_name">MazeApp</string>
    <!-- Maze Generator Activity -->
    <string name="prevStepButtonView">Previous step</string>
    <string name="nextStepButtonView">Next step</string>
    <string name="saveAndFavoriteButtonViewSaveState">Save Maze</string>
    <string name="saveAndFavoriteButtonViewFavoriteState">Add to favorites</string>
    <string name="saveAndFavoriteButtonViewUnfavoriteState">Remove from favorites</string>
    <string name="addedMazeToFavorites">Added to favorites</string>
    <string name="savedMaze">Maze Saved</string>

    <!-- Maze Setup Activity -->
    <string name="widthHint">Width</string>
    <string name="heightHint">Height</string>
    <string name="methodDropdownHint">Method</string>
    <string name="generateMazeButton">Generate Maze</string>
    <string name="mazeGenerationError">Invalid Generation Parameters</string>
    <string name="mazeAboveMaxSizeError">Maximum maze %1$s is %2$d</string>

    <!-- Main Menu Activity -->
    <string name="createMazeButtonView">Create New Maze</string>
    <string name="mazeListButtonView">All Mazes</string>
    <string name="favoriteListButtonView">Favorite Mazes</string>
    <string name="logOutButtonViewWithUser">Log Out</string>
    <string name="logOutButtonViewWithOutUser">Exit</string>
    <string name="maze_list_item">Maze List Item</string>
    <string name="accountNameTextView">User: %1$s</string>

    <!-- Log And Sign In Activity -->
    <string name="logInButtonView">Log In</string>
    <string name="signInButtonView">Sign In</string>
    <string name="continueAsGuestButtonView">Continue as a guest</string>
    <string name="usernameTextView">Username</string>
    <string name="passwordTextView">Password</string>
    <string name="credentialsErrorTextViewInvalidCredentials">%1$s must be between %2$d and %3$d characters long</string>
    <string name="credentialsErrorTextViewLogInError">Invalid credentials</string>
    <string name="credentialsErrorTextViewSignInError">Username taken</string>


</resources>